--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,49 @@
-name: Smoke testing
+name: Test
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
-    paths:
-      - 'pkgs/**'
-      - 'test/**'
 
 jobs:
-  test:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      pkgs: ${{ steps.changes.outputs.pkgs }}
+      lib: ${{ steps.changes.outputs.lib }}
+      test: ${{ steps.changes.outputs.test }}
+    steps:
+    - uses: actions/checkout@v2.4.0
+    - uses: dorny/paths-filter@v2
+      id: changes
+      with:
+        filters: |
+          pkgs:
+            - 'pkgs/**'
+          lib:
+            - 'pkgs/build-support/**'
+          test:
+            - 'test/**'
+
+  unit-tests:
+    needs: changes
+    if: ${{ needs.changes.outputs.lib == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2.4.0
+    - uses: cachix/install-nix-action@v16
+      with:
+        install_url: https://nixos-nix-install-tests.cachix.org/serve/vij683ly7sl95nnhb67bdjjfabclr85m/install
+        install_options: '--tarball-url-prefix https://nixos-nix-install-tests.cachix.org/serve'
+
+    - run: |
+        nix-instantiate --strict --eval --json pkgs/build-support/**/test*.nix \
+        | jq
+
+  smoke-tests:
+    needs: changes
+    if: ${{ needs.changes.outputs.pkgs == 'true' || needs.changes.outputs.test == 'true' }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.4.0
