chore(actions): Turn on pipefail

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,9 @@ jobs:
         install_url: https://nixos-nix-install-tests.cachix.org/serve/vij683ly7sl95nnhb67bdjjfabclr85m/install
         install_options: '--tarball-url-prefix https://nixos-nix-install-tests.cachix.org/serve'
 
-    - run: |
+    - name: Run unit tests
+      run: |
+        set -euo pipefail
         nix-instantiate --strict --eval --json pkgs/build-support/**/test*.nix \
         | jq
 
