--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Build the configuration without a lock file (which should fail)
       id: no-lock
       working-directory: test
-      run: nix build
+      run: nix build --dry-run
       continue-on-error: true
 
     - name: Pure evaluation without the lock file must fail
@@ -94,7 +94,7 @@ jobs:
 
     - name: Build the configuration with the generated lock file
       working-directory: test
-      run: nix build
+      run: nix build --dry-run
 
     - name: Get the system
       id: system
