feat: Add archive-data inventory type
This will allow the user to easily install latest releases of ELPA packages.
Actually, some ELPA packages are difficult for building from source, so it is
recommended to install ELPA packages from archives.

--- a/test/Makefile
+++ b/test/Makefile
@@ -15,6 +15,10 @@ sync:
 	$(NIX) run .#sync -- $(NIX_OPTIONS)
 .PHONY: sync
 
+update:
+	$(NIX) run .#update -- $(NIX_OPTIONS)
+.PHONY: update
+
 remove-lock:
 	rm -f repos/flake.nix repos/flake.lock
 .PHONY: remove-lock
