--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,19 +74,21 @@ jobs:
       if: ${{ steps.no-lock.outcome == 'success' }}
       run: exit 1
 
-    - name: Fetch the latest package archive contents
+    - name: Lock the ELPA packages
       working-directory: test
-      run: nix run .#update
+      run: nix run .#update-elpa
 
-    - name: Generate the lock file
+    - name: Generate the lock file for MELPA packages
       working-directory: test
       run: nix run .#lock
 
     - name: The lock file exists
       working-directory: test
       run: |
+        [[ -s repos/archive.lock ]]
         [[ -s repos/flake.nix ]]
         [[ -s repos/flake.lock ]]
+        ! git diff-index --exit-code --cached HEAD repos/archive.lock
         ! git diff-index --exit-code --cached HEAD repos/flake.lock
 
     - name: Build the configuration with the generated lock file
