chore: Trigger the test on changes in the workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
             - 'pkgs/build-support/**'
           test:
             - 'test/**'
+            - '.github/workflows/test.yml'
 
   unit-tests:
     needs: changes
