test: Fix the path to the lock files
Reflected 30a44e12163038393acd5ebfbb45eb5d1add4982

--- a/test/Makefile
+++ b/test/Makefile
@@ -20,7 +20,7 @@ update-elpa:
 .PHONY: update-elpa
 
 clean:
-	rm -f repos/flake.nix repos/flake.lock repos/archive.lock
+	rm -f lock/flake.nix lock/flake.lock lock/archive.lock
 .PHONY: clean
 
 eval:
