--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,9 +63,9 @@ jobs:
       working-directory: test
       run: |
         make clean
-        [[ ! -f repos/flake.nix ]]
-        [[ ! -f repos/flake.lock ]]
-        [[ ! -f repos/archive.lock ]]
+        [[ ! -f lock/flake.nix ]]
+        [[ ! -f lock/flake.lock ]]
+        [[ ! -f lock/archive.lock ]]
 
     - name: Build the configuration without a lock file (which should fail)
       id: no-lock
@@ -88,9 +88,9 @@ jobs:
     - name: The lock file exists
       working-directory: test
       run: |
-        [[ -s repos/archive.lock ]]
-        [[ -s repos/flake.nix ]]
-        [[ -s repos/flake.lock ]]
+        [[ -s lock/archive.lock ]]
+        [[ -s lock/flake.nix ]]
+        [[ -s lock/flake.lock ]]
 
     - name: Build the configuration with the generated lock file
       working-directory: test
