--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,3 +116,5 @@ jobs:
         nix eval --json .#${{ steps.system.outputs.emacs }}.elispPackages.magit \
         | jq
       working-directory: test
+
+    - run: nix flake show
