--- a/.github/workflows/update-doc.yml
+++ b/.github/workflows/update-doc.yml
@@ -21,7 +21,7 @@ jobs:
     - run: nix run .#generate-info
       working-directory: doc
 
-    - run: git diff-tree --exit-code HEAD doc
+    - run: git diff-index --exit-code --name-status HEAD -- doc
       id: diff
       continue-on-error: true
 
@@ -30,5 +30,5 @@ jobs:
       run: |
         git config --local user.email 6270544+github-actions[bot]@users.noreply.github.com
         git config --local user.name github-actions[bot]
-        git commit -a -m 'Re-generate extra documentation formats' doc
+        git commit -m 'Re-generate extra documentation formats' -- doc
         git push
