--- a/.github/workflows/update-inputs.yml
+++ b/.github/workflows/update-inputs.yml
@@ -9,7 +9,7 @@ jobs:
   update:
     runs-on: ubuntu-latest
     outputs:
-      updated: ${{ steps.pr.conclusion == 'success' }}
+      pr: ${{ steps.pr.outputs.pull-request-operation }}
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v17
@@ -25,5 +25,5 @@ jobs:
 
   test:
     needs: ['update']
-    if: ${{ needs.update.outputs.updated == 'true' }}
+    if: ${{ needs.update.outputs.pr == 'created' || needs.update.outputs.pr == 'updated' }}
     uses: ./.github/workflows/smoke-test.yml
