--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -82,6 +82,11 @@ jobs:
       working-directory: test
 
     - run: |
+        nix eval --json .#${{ steps.system.outputs.emacs }}.revDeps \
+        | jq
+      working-directory: test
+
+    - run: |
         nix eval --json .#${{ steps.system.outputs.emacs }}.elispPackages.magit \
         | jq
       working-directory: test
