--- a/.github/workflows/update-inputs.yml
+++ b/.github/workflows/update-inputs.yml
@@ -14,6 +14,8 @@ jobs:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v18
     - run: nix flake update
+    - run: nix flake lock --update-input emacs-ci
+      working-directory: test
     - uses: peter-evans/create-pull-request@v4
       id: pr
       with:
