--- a/.github/workflows/update-test-inputs.yml
+++ b/.github/workflows/update-test-inputs.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v18
+      with:
+        extra_nix_config: |
+          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
     - run: nix flake update
     - run: nix flake lock --update-input emacs-ci
       working-directory: test
