ci: Don't update emacs-ci
The file name was actually renamed by mistake, so I will revert it back to the
original name.

--- a/.github/workflows/update-inputs.yml
+++ b/.github/workflows/update-inputs.yml
@@ -1,4 +1,4 @@
-name: Update inputs for the test
+name: Update inputs
 
 on:
   schedule:
@@ -17,8 +17,6 @@ jobs:
         extra_nix_config: |
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
     - run: nix flake update
-    - run: nix flake lock --update-input emacs-ci
-      working-directory: test
     - uses: peter-evans/create-pull-request@v4
       id: pr
       with:
