--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -22,7 +22,7 @@ jobs:
           accept-flake-config = true
 
     - name: Update the flake inputs for the test
-      run: nix flake update --inputs-from $PWD/.. --override-input twist $PWD/..
+      run: nix flake update --override-input twist $PWD/..
       working-directory: test
 
     - name: Check the precondition
