ci(smoke-test): Trigger when modules/** is modified as well

--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -5,6 +5,7 @@ on:
     paths:
     - 'flake.lock'
     - 'pkgs/**'
+    - 'modules/**'
     - 'test/**'
     - '.github/workflows/smoke-test.yml'
   workflow_dispatch:
