--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -10,6 +10,8 @@ on:
     - '.github/workflows/smoke-test.yml'
   workflow_dispatch:
   workflow_call:
+  schedule:
+    - cron: '0 9 * * 2'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
