test: Add just target to test the new lock API

--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -35,6 +35,8 @@ jobs:
 
     - name: Test
       working-directory: test
-      run: nix develop -c just test
+      run: |
+        nix develop -c just test
+        nix develop -c just local-lock-2
 
     - run: nix flake show
