--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -36,11 +36,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v31
+
+    - name: Set up Nix
+      uses: ./.github/actions/setup
       with:
-        extra_nix_config: |
-          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-          accept-flake-config = true
+        cachix-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
     - name: Update the flake inputs for the test
       run: |
