--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -27,9 +27,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v31
+
+    - name: Set up Nix
+      uses: ./.github/actions/setup
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
+        cachix-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
     - run: nix flake update
       working-directory: pkgs/build-support/elisp
