--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -28,10 +28,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Nix
-      uses: ./.github/actions/setup
+    - uses: cachix/install-nix-action@v31
       with:
-        cachix-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
+        # nixpkgs channel is needed for the unit tests
+        nix_path: nixpkgs=channel:nixos-unstable
 
     - run: nix flake update
       working-directory: pkgs/build-support/elisp
