tests: Remove archive.lock

--- a/test/justfile
+++ b/test/justfile
@@ -1,5 +1,5 @@
 purge-lock:
-    rm -f lock/flake.nix lock/flake.lock lock/archive.lock
+    rm -f lock/flake.nix lock/flake.lock
 
 # Used for local development.
 local-lock:
@@ -34,7 +34,6 @@ test-fail-without-lock: purge-lock
     # Test preconditions
     [[ ! -f lock/flake.nix ]]
     [[ ! -f lock/flake.lock ]]
-    [[ ! -f lock/archive.lock ]]
     # Build the configuration without a lock file (which should fail)
     ! nix build .\#emacs --dry-run
 
@@ -42,7 +41,6 @@ test-recreate-lock: test-fail-without-lock
     nix run .\#update --impure
     nix run .\#lock --impure
     # Test post-conditions
-    [[ -s lock/archive.lock ]]
     [[ -s lock/flake.nix ]]
     [[ -s lock/flake.lock ]]
 
